--- a/app/scripts/modules/kubernetes/src/v2/pipelines/stages/deployManifest/deployManifestExecutionDetails.html
+++ b/app/scripts/modules/kubernetes/src/v2/pipelines/stages/deployManifest/deployManifestExecutionDetails.html
@@ -7,9 +7,12 @@
       <div class="col-md-12">
         <div class="well alert alert-info">
           <dl ng-repeat="manifest in stage.context['outputs.manifests']">
-            <b>{{manifest.kind}}</b> {{manifest.metadata.name}}:
-            <kubernetes-show-manifest-yaml manifest="manifest" link-name="'YAML'"></kubernetes-show-manifest-yaml>
-            <kubernetes-show-manifest-details application="application" manifest-contents="manifest" account-id="stage.context.account" link-name="'Details'"></kubernetes-show-manifest-details>
+            <b>{{manifest.kind}}</b> {{manifest.metadata.name}}
+            <kubernetes-deploy-manifest-deploy-status-manifest-summary
+              stage="stage"
+              application="application"
+              manifest-contents="manifest">
+            </kubernetes-deploy-manifest-deploy-status-manifest-summary>
           </dl>
         </div>
       </div>
