--- a/app/scripts/modules/core/src/pipeline/config/stages/bakeManifest/bakeManifestConfig.html
+++ b/app/scripts/modules/core/src/pipeline/config/stages/bakeManifest/bakeManifestConfig.html
@@ -2,76 +2,64 @@
   <div class="alert alert-warning">
     <strong>Warning!</strong> This stage is under active development and is subject to change.
   </div>
-  <h4>Template Renderer</h4>
-  <div class="form-group">
-    <div class="col-md-3 sm-label-right">
-      Render Engine
-      <help-field key="pipeline.config.bake.manifest.templateRenderer"></help-field>
-    </div>
-    <div class="col-md-3">
+
+  <div class="container-fluid form-horizontal">
+    <h4>Template Renderer</h4>
+    <stage-config-field label="Render Engine"
+                        help-key="pipeline.config.bake.manifest.templateRenderer"
+                        field-columns="3">
       <select class="form-control input-sm"
               ng-model="ctrl.$scope.stage.templateRenderer">
         <option ng-repeat="renderer in ctrl.templateRenderers"
                 value="{{renderer}}"
                 ng-selected="ctrl.$scope.stage.templateRenderer === renderer">{{renderer}}</option>
       </select>
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="col-md-3 sm-label-right">
-      Name
-    </div>
-    <div class="col-md-3">
+    </stage-config-field>
+    <stage-config-field label="Name" field-columns="3">
       <input type="text" class="form-control input-sm"
              ng-model="ctrl.$scope.stage.outputName"
              ng-change="ctrl.outputNameChange()">
       </input>
-    </div>
-  </div>
+    </stage-config-field>
 
-  <h4>Template Artifact</h4>
-  <expected-artifact-selector command="ctrl.$scope.stage"
-                              id="ctrl.$scope.stage.inputArtifacts[0].id"
-                              account="ctrl.$scope.stage.inputArtifacts[0].account"
-                              accounts="ctrl.artifactAccounts"
-                              expected-artifacts="ctrl.expectedArtifacts"
-                              help-field-key="pipeline.config.bake.manifest.expectedArtifact">
-  </expected-artifact-selector>
+    <h4>Template Artifact</h4>
+    <expected-artifact-selector command="ctrl.$scope.stage"
+                                id="ctrl.$scope.stage.inputArtifacts[0].id"
+                                account="ctrl.$scope.stage.inputArtifacts[0].account"
+                                accounts="ctrl.artifactAccounts"
+                                expected-artifacts="ctrl.expectedArtifacts"
+                                help-field-key="pipeline.config.bake.manifest.expectedArtifact">
+    </expected-artifact-selector>
 
-  <h4>Overrides</h4>
-  <div class="row form-group" ng-if="ctrl.hasValueArtifacts()" ng-repeat="artifact in ctrl.$scope.stage.inputArtifacts.slice(1)">
-    <div class="col-md-offset-1 col-md-9">
-      <expected-artifact-selector command="ctrl.$scope.stage"
-                                  id="artifact.id"
-                                  account="artifact.account"
-                                  accounts="ctrl.artifactAccounts"
-                                  expected-artifacts="ctrl.expectedArtifacts">
-      </expected-artifact-selector>
-    </div>
-    <div class="col-md-1">
-      <div class="form-control-static">
-        <a href ng-click="ctrl.removeInputArtifact($index + 1)">
-          <span class="glyphicon glyphicon-trash"></span>
-          <span class="sr-only">Remove field</span>
-        </a>
+    <h4>Overrides</h4>
+    <div class="row form-group" ng-if="ctrl.hasValueArtifacts()" ng-repeat="artifact in ctrl.$scope.stage.inputArtifacts.slice(1)">
+      <div class="col-md-offset-1 col-md-9">
+        <expected-artifact-selector command="ctrl.$scope.stage"
+                                    id="artifact.id"
+                                    account="artifact.account"
+                                    accounts="ctrl.artifactAccounts"
+                                    expected-artifacts="ctrl.expectedArtifacts">
+        </expected-artifact-selector>
+      </div>
+      <div class="col-md-1">
+        <div class="form-control-static">
+          <a href ng-click="ctrl.removeInputArtifact($index + 1)">
+            <span class="glyphicon glyphicon-trash"></span>
+            <span class="sr-only">Remove field</span>
+          </a>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="row form-group">
-    <div class="col-md-offset-3 col-md-7">
+
+    <stage-config-field field-columns="8">
       <button class="btn btn-block btn-sm add-new" ng-click="ctrl.addInputArtifact()">
         <span class="glyphicon glyphicon-plus-sign"></span>
         Add value artifact
       </button>
-    </div>
-  </div>
+    </stage-config-field>
 
-  <div class="form-group">
-    <div class="col-md-3 sm-label-right">
-      Overrides
-    </div>
-    <div class="col-md-6">
+    <stage-config-field label="Overrides" field-columns="6">
       <map-editor model="ctrl.$scope.stage.overrides" add-button-label="Add override"></map-editor>
-    </div>
+    </stage-config-field>
   </div>
 </div>
