fix(pubsub): Filter displayed list of Pub/Sub Subscription Names by Pub/Sub System Type. (#5281)
* fix(pubsub): Filter displayed list of Pub/Sub Subscription Names by Pub/Sub System Type.

Also remove 'kafka' from list of Pub/Sub System Types in settings.js and pubsub.trigger.ts.

* fix(pubsub): Fix up imports and add joonlim next to TODO.

* fix(pubsub): Add pubsubProviders configuration field to halconfig/settings.js.

--- a/app/scripts/modules/core/src/pipeline/config/triggers/pubsub/pubsubTrigger.html
+++ b/app/scripts/modules/core/src/pipeline/config/triggers/pubsub/pubsubTrigger.html
@@ -6,7 +6,8 @@
     <div class="col-md-6">
       <select class="form-control input-sm"
               ng-options="pubsubSystem for pubsubSystem in vm.pubsubSystems"
-              ng-model="vm.trigger.pubsubSystem">
+              ng-model="vm.trigger.pubsubSystem"
+              ng-change="vm.updateFilteredPubsubSubscriptions()">
         <option value="">Select Pub/Sub System</option>
       </select>
     </div>
@@ -18,7 +19,7 @@
     </div>
     <div class="col-md-6">
       <select class="form-control input-sm"
-              ng-options="pubsubSystem for pubsubSystem in vm.pubsubSubscriptions"
+              ng-options="subscription for subscription in vm.filteredPubsubSubscriptions"
               ng-model="vm.trigger.subscriptionName">
         <option value="">Select Pub/Sub Subscription</option>
       </select>
