feat(core/tasks): If no user for the task, show the authenticated user (#5308)

--- a/app/scripts/modules/core/src/task/tasks.html
+++ b/app/scripts/modules/core/src/task/tasks.html
@@ -125,7 +125,7 @@
                 </span>
               </td>
               <td>
-                {{ task.getValueFor('user') || '-' }}
+                {{ task.getValueFor('user') || task.execution.authentication.user || '-' }}
               </td>
               <td class="small text-center">
                 <a ng-if="task.isRunning || task.hasNotStarted" href ng-click="tasks.cancelTask(task.id); $event.stopPropagation();">
