--- a/app/scripts/modules/core/src/pipeline/manualExecution/manualPipelineExecution.html
+++ b/app/scripts/modules/core/src/pipeline/manualExecution/manualPipelineExecution.html
@@ -69,7 +69,7 @@
             </select>
           </div>
         </div>
-        <div ng-include="vm.triggerTemplate"></div>
+        <trigger-template component="vm.triggerComponent" command="vm.command"/>
       </div>
 
       <div ng-if="vm.command.pipeline.parameterConfig !== undefined && vm.command.pipeline.parameterConfig.length">
@@ -108,9 +108,7 @@
         </div>
       </div>
 
-      <div ng-repeat="template in vm.stageTemplates">
-        <div ng-include="template"></div>
-      </div>
+      <stage-manual-components command="vm.command" components="vm.stageComponents" />
 
       <div class="form-group">
         <label class="col-md-4 sm-label-right">Notifications</label>
