--- a/app/scripts/modules/kubernetes/src/v2/pipelines/stages/deployManifest/deployManifestExecutionDetails.html
+++ b/app/scripts/modules/kubernetes/src/v2/pipelines/stages/deployManifest/deployManifestExecutionDetails.html
@@ -24,4 +24,8 @@
       <execution-step-details item="stage"></execution-step-details>
     </div>
   </div>
+
+  <div class="step-section-details" ng-if="detailsSection === 'artifactStatus'">
+    <kubernetes-execution-artifact-tab stage="stage" execution="execution"></kubernetes>
+  </div>
 </div>
