--- a/app/scripts/modules/core/src/pipeline/config/stages/bakeManifest/bakeManifestConfig.html
+++ b/app/scripts/modules/core/src/pipeline/config/stages/bakeManifest/bakeManifestConfig.html
@@ -28,7 +28,8 @@
                                 account="ctrl.$scope.stage.inputArtifacts[0].account"
                                 accounts="ctrl.artifactAccounts"
                                 expected-artifacts="ctrl.expectedArtifacts"
-                                help-field-key="pipeline.config.bake.manifest.expectedArtifact">
+                                help-field-key="pipeline.config.bake.manifest.expectedArtifact"
+                                show-icons="true">
     </expected-artifact-selector>
 
     <h4>Overrides</h4>
@@ -38,7 +39,8 @@
                                     id="artifact.id"
                                     account="artifact.account"
                                     accounts="ctrl.artifactAccounts"
-                                    expected-artifacts="ctrl.expectedArtifacts">
+                                    expected-artifacts="ctrl.expectedArtifacts"
+                                    show-icons="true">
         </expected-artifact-selector>
       </div>
       <div class="col-md-1">
