--- a/app/scripts/modules/google/src/pipeline/stages/bake/bakeStage.html
+++ b/app/scripts/modules/google/src/pipeline/stages/bake/bakeStage.html
@@ -7,7 +7,8 @@
                                     ids-field="packageArtifactIds"
                                     artifact-label="Package Artifacts"
                                     expected-artifacts="viewState.expectedArtifacts"
-                                    help-field-key="pipeline.config.bake.packageArtifacts">
+                                    help-field-key="pipeline.config.bake.packageArtifacts"
+                                    show-icons="true">
   </expected-artifact-multi-selector>
 
   <hr>
