--- a/app/scripts/modules/google/src/serverGroup/configure/wizard/location/basicSettings.html
+++ b/app/scripts/modules/google/src/serverGroup/configure/wizard/location/basicSettings.html
@@ -62,7 +62,8 @@
                                   command="command"
                                   id="command.imageArtifactId"
                                   expected-artifacts="command.viewState.expectedArtifacts"
-                                  help-field-key="gce.image.artifact">
+                                  help-field-key="gce.image.artifact"
+                                  show-icons="true">
       </expected-artifact-selector>
     </div>
     <div class="form-group" ng-if="!command.viewState.disableImageSelection">
