fix(provider/kubernetes): correct closing tag in deploy manifest execution details (#5361)

--- a/app/scripts/modules/kubernetes/src/v2/pipelines/stages/deployManifest/deployManifestExecutionDetails.html
+++ b/app/scripts/modules/kubernetes/src/v2/pipelines/stages/deployManifest/deployManifestExecutionDetails.html
@@ -26,6 +26,6 @@
   </div>
 
   <div class="step-section-details" ng-if="detailsSection === 'artifactStatus'">
-    <kubernetes-execution-artifact-tab stage="stage" execution="execution"></kubernetes>
+    <kubernetes-execution-artifact-tab stage="stage" execution="execution"></kubernetes-execution-artifact-tab>
   </div>
 </div>
