fix(core): Added validators for script stage

--- a/app/scripts/modules/core/src/pipeline/config/stages/script/scriptStage.html
+++ b/app/scripts/modules/core/src/pipeline/config/stages/script/scriptStage.html
@@ -13,11 +13,11 @@
            ng-model="stage.repoBranch"/>
   </stage-config-field>
   <stage-config-field label="Script Path" help-key="pipeline.config.script.path">
-    <input type="text" class="form-control input-sm"
+    <input type="text" class="form-control input-sm" required
            ng-model="stage.scriptPath"/>
   </stage-config-field>
   <stage-config-field label="Command" help-key="pipeline.config.script.command">
-    <textarea class="form-control input-sm"
+    <textarea class="form-control input-sm" required
               ng-model="stage.command"/>
   </stage-config-field>
   <stage-config-field label="Output File" help-key="pipeline.config.script.propertyFile">
