feat(*/instance): add moniker info + env to instance link templates (#5367)

--- a/app/scripts/modules/cloudfoundry/instance/details/instanceDetails.html
+++ b/app/scripts/modules/cloudfoundry/instance/details/instanceDetails.html
@@ -137,7 +137,7 @@
         </li>
       </ul>
     </collapsible-section>
-    <instance-links address="baseIpAddress" application="application" instance="instance"></instance-links>
+    <instance-links address="baseIpAddress" application="application" instance="instance" moniker="moniker" environment="environment"></instance-links>
   </div>
   <div class="content" ng-if="!state.loading && !instance">
     <div class="content-section">
