--- a/app/scripts/modules/kubernetes/src/instance/details/details.html
+++ b/app/scripts/modules/kubernetes/src/instance/details/details.html
@@ -141,7 +141,7 @@
         <console-output-link instance="instance"></console-output-link>
       </div>
     </collapsible-section>
-    <instance-links address="ctrl.baseIpAddress" application="ctrl.application" instance="instance"></instance-links>
+    <instance-links address="ctrl.baseIpAddress" application="ctrl.application" instance="instance" moniker="moniker" environment="environment"></instance-links>
   </div>
   <div class="content" ng-if="!state.loading && !instance">
     <div class="content-section">
