--- a/app/scripts/modules/titus/src/instance/details/instanceDetails.html
+++ b/app/scripts/modules/titus/src/instance/details/instanceDetails.html
@@ -169,7 +169,7 @@
           Logs in Titus UI</a></li>
       </ul>
     </collapsible-section>
-    <instance-links address="baseIpAddress" application="application" instance="instance"></instance-links>
+    <instance-links address="baseIpAddress" application="application" instance="instance" moniker="moniker" environment="environment"></instance-links>
   </div>
   <div class="content" ng-if="!state.loading && !instance">
     <div class="content-section">
