feat(artifacts): Add artifact details to GCE bake and deploy stages (#5374)

--- a/app/scripts/modules/core/src/pipeline/config/stages/deploy/deployExecutionDetails.html
+++ b/app/scripts/modules/core/src/pipeline/config/stages/deploy/deployExecutionDetails.html
@@ -102,4 +102,8 @@
                        change-config="changeConfig"
                        name-item="stage"></view-changes-link>
   </div>
+
+  <div class="step-section-details" ng-if="detailsSection === 'artifactStatus'">
+    <execution-artifact-tab stage="stage" execution="execution" artifact-fields="config.artifactFields"></execution-artifact-tab>
+  </div>
 </div>
