--- a/app/scripts/modules/google/src/pipeline/stages/bake/bakeExecutionDetails.html
+++ b/app/scripts/modules/google/src/pipeline/stages/bake/bakeExecutionDetails.html
@@ -54,4 +54,8 @@
       <execution-step-details item="stage"></execution-step-details>
     </div>
   </div>
+
+  <div class="step-section-details" ng-if="detailsSection === 'artifactStatus'">
+    <execution-artifact-tab stage="stage" execution="execution" artifact-fields="config.artifactFields"></execution-artifact-tab>
+  </div>
 </div>
