refactor(core) de-angularize more services (#5390)
* refactor(core): de-angularize SecurityGroupWriter

* refactor(core): de-angularize AppListExtractor

* refactor(core): de-angularize ServerGroupManagerReader

* refactor(core): de-angularize TimePickerOptions

* refactor(core): de-angularize JsonListBuilder

* refactor(core): de-angularize ProjectReader/Writer

* refactor(core): de-angularize SnapshotReader/Writer

* refactor(core): de-angularize NotificationsService

* refactor(core): remove appendTransform

* refactor(core): de-angularize VersionChecker

--- a/app/scripts/modules/core/src/pipeline/config/stages/executionWindows/executionWindows.html
+++ b/app/scripts/modules/core/src/pipeline/config/stages/executionWindows/executionWindows.html
@@ -73,12 +73,12 @@
           </span>
           <select class="input input-sm"
                   ng-model="window.startHour"
-                  ng-options="option.key as option.label for option in hours">
+                  ng-options="option.value as option.label for option in hours">
           </select>
           :
           <select class="input input-sm"
                   ng-model="window.startMin"
-                  ng-options="option.key as option.label for option in minutes">
+                  ng-options="option.value as option.label for option in minutes">
           </select>
           <span class="start-end-divider">
             to
@@ -86,12 +86,12 @@
 
           <select class="input input-sm"
                   ng-model="window.endHour"
-                  ng-options="option.key as option.label for option in hours">
+                  ng-options="option.value as option.label for option in hours">
           </select>
           :
           <select class="input input-sm"
                   ng-model="window.endMin"
-                  ng-options="option.key as option.label for option in minutes">
+                  ng-options="option.value as option.label for option in minutes">
           </select>
 
           <button class="btn-link btn-remove"
