chore(provider/kubernetes): reactify deployManifest execution details (#5376)

--- a/app/scripts/modules/core/src/pipeline/config/stages/deploy/deployExecutionDetails.html
+++ b/app/scripts/modules/core/src/pipeline/config/stages/deploy/deployExecutionDetails.html
@@ -104,6 +104,6 @@
   </div>
 
   <div class="step-section-details" ng-if="detailsSection === 'artifactStatus'">
-    <execution-artifact-tab stage="stage" execution="execution" artifact-fields="config.artifactFields"></execution-artifact-tab>
+    <execution-artifact-tab stage="stage" execution="execution" config="config"></execution-artifact-tab>
   </div>
 </div>
