feat(codelabs): update cicd example with env config

--- a/codelabs/cicd-k8s-best-practice/app/src/content/index.html
+++ b/codelabs/cicd-k8s-best-practice/app/src/content/index.html
@@ -2,8 +2,9 @@
 <html>
   <body style="background-color:blue">
     <h2>Hello, world!</h2>
-    <p>Message from the backend:</p>
-    <p>{{.Message}}</p>
-    <p>{{.Feature}}</p>
+    <p>Environment-only configuration:</p>
+    <p>{{.Env}}</p>
+    <p>Appliation configuration:</p>
+    <p>{{.Config}}</p>
   </body>
 </html>
