refactor(core): allow React components for stage config (#5398)

--- a/app/scripts/modules/core/src/pipeline/config/pipelineConfigView.html
+++ b/app/scripts/modules/core/src/pipeline/config/pipelineConfigView.html
@@ -7,6 +7,7 @@
     <pipeline-config-stage ng-if="viewState.section === 'stage'"
                            application="application"
                            view-state="viewState"
+                           stage-field-updated="stageFieldUpdated"
                            pipeline="pipeline">
     </pipeline-config-stage>
   </div>
