feat(bake/manifests): Add namespace support for Helm bakery (#5326)
* Add namespace support for Helm bakery

* Use properties parameters for namespace

--- a/app/scripts/modules/core/src/pipeline/config/stages/bakeManifest/bakeManifestConfig.html
+++ b/app/scripts/modules/core/src/pipeline/config/stages/bakeManifest/bakeManifestConfig.html
@@ -21,6 +21,11 @@
              ng-change="ctrl.outputNameChange()">
       </input>
     </stage-config-field>
+    <stage-config-field label="Namespace" field-columns="3">
+      <input type="text" class="form-control input-sm"
+             ng-model="ctrl.$scope.stage.properties.namespace">
+      </input>
+    </stage-config-field>
 
     <h4>Template Artifact</h4>
     <expected-artifact-selector command="ctrl.$scope.stage"
