feat(core/presentation): Make CollapsibleSection less style opinionated (#5427)
- Pass in four classNames
- Do not render <h4> markup when render prop is provided
- Tweak chevron size (use px)
- Animate chevron rotation

--- a/app/scripts/modules/core/src/presentation/collapsibleSection/collapsibleSection.directive.html
+++ b/app/scripts/modules/core/src/presentation/collapsibleSection/collapsibleSection.directive.html
@@ -1,7 +1,7 @@
 <div class="collapsible-{{getClassType()}}section">
   <a href class="section-{{getClassType()}}heading" ng-click="toggle()">
     <h4 class="collapsible-{{getClassType()}}heading">
-      <span class="glyphicon glyphicon-chevron-{{getIcon()}}"></span>
+      <span class="glyphicon glyphicon-chevron-right" style="{{getIconStyle()}}"></span>
       {{heading}}
       <span ng-transclude="heading"></span>
       <help-field ng-if="helpKey" key="{{helpKey}}" placement="right"></help-field>
