--- a/app/scripts/modules/core/src/cluster/filter/collapsibleFilterSection.html
+++ b/app/scripts/modules/core/src/cluster/filter/collapsibleFilterSection.html
@@ -1,7 +1,7 @@
 <div class="collapsible-filter-section">
     <a href class="section-heading" ng-click="toggle()">
       <h4>
-        <span class="glyphicon glyphicon-chevron-{{getIcon()}}"></span>
+        <span class="glyphicon glyphicon-chevron-right" style="{{getIconStyle()}}"></span>
         {{heading}}
         <help-field ng-if="helpKey" key="{{helpKey}}" placement="right"></help-field>
       </h4>
