feat(provider/gce): Adds mode to autoscaling detail and upsert. (#5458)

--- a/app/scripts/modules/google/src/serverGroup/details/autoscalingPolicy/autoscalingPolicy.directive.html
+++ b/app/scripts/modules/google/src/serverGroup/details/autoscalingPolicy/autoscalingPolicy.directive.html
@@ -21,6 +21,11 @@
     <help-field key="gce.serverGroup.autoscaling.cooldown"></help-field>
   </dt>
   <dd>{{$ctrl.policy.coolDownPeriodSec}} sec</dd>
+  <dt>
+    Mode
+    <help-field key="gce.serverGroup.autoscaling.mode"></help-field>
+  </dt>
+  <dd>{{$ctrl.policy.mode}}</dd>
   <dt ng-if="$ctrl.serverGroup.autoscalingMessages">Messages</dt>
   <dd ng-if="$ctrl.serverGroup.autoscalingMessages"
       ng-repeat="message in $ctrl.serverGroup.autoscalingMessages">{{message}}</dd>
