--- a/app/scripts/modules/oracle/pipeline/stages/findAmi/findAmiStage.html
+++ b/app/scripts/modules/oracle/pipeline/stages/findAmi/findAmiStage.html
@@ -1,4 +1,4 @@
-<div ng-controller="oraclebmcsFindAmiStageCtrl as findAmiCtrl" class="form-horizontal">
+<div ng-controller="oracleFindAmiStageCtrl as findAmiCtrl" class="form-horizontal">
   <account-region-cluster-selector
     application="application"
     component="stage"
