--- a/app/scripts/modules/oracle/securityGroup/configure/createSecurityGroup.html
+++ b/app/scripts/modules/oracle/securityGroup/configure/createSecurityGroup.html
@@ -1,11 +1,11 @@
 <ng-form role="form" name="form" novalidate>
-  <v2-modal-wizard heading="Create New Oracle BMC {{firewallLabel}}" dismiss="$dismiss()">
+  <v2-modal-wizard heading="Create New Oracle {{firewallLabel}}" dismiss="$dismiss()">
   </v2-modal-wizard>
   <div class="container-fluid">
     <div class="col-md-12 well">
       <h4>Notice</h4>
-      <p>We don't currently support the ability to create <firewall-label label="firewalls"/> for Oracle BMCS.</p>
-      <p>You can use the BMCS console to create and manage your <firewall-label label="Firewalls"/>.</p>
+      <p>We don't currently support the ability to create <firewall-label label="firewalls"/> for Oracle.</p>
+      <p>You can use the Oracle console to create and manage your <firewall-label label="Firewalls"/>.</p>
     </div>
   </div>
   <div class="modal-footer">
