--- a/app/scripts/modules/oracle/serverGroup/configure/wizard/templateSelection/templateSelection.html
+++ b/app/scripts/modules/oracle/serverGroup/configure/wizard/templateSelection/templateSelection.html
@@ -1,4 +1,4 @@
-<deploy-initializer cloud-provider="oraclebmcs"
+<deploy-initializer cloud-provider="oracle"
                     command="command"
                     application="application"
                     parent-state="state"
