--- a/app/scripts/modules/oracle/serverGroup/details/resize/resizeServerGroup.html
+++ b/app/scripts/modules/oracle/serverGroup/details/resize/resizeServerGroup.html
@@ -7,11 +7,11 @@
     </div>
     <div class="modal-body confirmation-modal">
       <div class="form-horizontal">
-        <oracle-bmcs-resize-capacity
+        <oracle-resize-capacity
                              server-group="serverGroup"
                              form-methods="formMethods"
                              application="application"
-                             command="command"></oracle-bmcs-resize-capacity>
+                             command="command"></oracle-resize-capacity>
       </div>
       <div class="row" ng-if="command.platformHealthOnlyShowOverride">
         <div class="col-sm-10 col-sm-offset-1">
@@ -23,10 +23,10 @@
       </div>
       <task-reason command="command"></task-reason>
     </div>
-    <oracle-bmcs-footer action="ctrl.resize()"
+    <oracle-footer action="ctrl.resize()"
                         cancel="ctrl.cancel()"
                         is-valid="ctrl.isValid()"
                         account="serverGroup.account"
-                        verification="verification"></oracle-bmcs-footer>
+                        verification="verification"></oracle-footer>
   </form>
 </div>
