feat(titus): Show aws account backing titus account in deploy dialog

--- a/app/scripts/modules/titus/src/serverGroup/configure/wizard/securityGroups.html
+++ b/app/scripts/modules/titus/src/serverGroup/configure/wizard/securityGroups.html
@@ -1,5 +1,6 @@
 <titus-security-group-picker ng-if="state.loaded"
                              command="command"
+                             show-amazon-account="true"
                              groups-to-edit="command.securityGroups"
                              removed-groups="command.viewState.removedGroups"
                              groups-removed="command.viewState.groupsRemovedStream"
