--- a/app/scripts/modules/titus/src/serverGroup/configure/serverGroupBasicSettingsDirective.html
+++ b/app/scripts/modules/titus/src/serverGroup/configure/serverGroupBasicSettingsDirective.html
@@ -5,6 +5,7 @@
     </div>
     <div class="col-md-7">
       <account-select-field component="command" field="credentials" accounts="command.backingData.accounts" provider="'titus'" on-change="command.credentialsChanged()"></account-select-field>
+      <div class="small" ng-if="command.credentials !== undefined">Uses resources from the Amazon account <account-tag account="command.backingData.credentialsKeyedByAccount[command.credentials].awsAccount" pad="right"></account-tag></div>
     </div>
   </div>
   <region-select-field label-columns="2"
