--- a/app/scripts/modules/titus/src/serverGroup/configure/wizard/parameters.html
+++ b/app/scripts/modules/titus/src/serverGroup/configure/wizard/parameters.html
@@ -4,9 +4,14 @@
       <div class="col-md-4 sm-label-right"><b>IAM Instance Profile</b>
         <help-field key="titus.deploy.iamProfile"></help-field>
       </div>
-      <div class="col-md-6"><input type="text"
-                                   class="form-control input-sm no-spel"
-                                   ng-model="command.iamProfile"/></div>
+      <div class="col-md-5">
+        <input type="text"
+          class="form-control input-sm no-spel"
+          ng-model="command.iamProfile"/>
+      </div>
+      <div class="col-md-1 small" style="white-space: nowrap; padding-left: 0; padding-top: 7px;">
+          in <account-tag account="command.backingData.credentialsKeyedByAccount[command.credentials].awsAccount" pad="right"></account-tag>
+      </div>
     </div>
     <div class="form-group">
       <div class="col-md-4 sm-label-right"><b>Soft Constraints</b>
