fix(amazon/loadBalancer): Fix DNS link in target group to match load balancer (#5489)

--- a/app/scripts/modules/amazon/src/loadBalancer/details/targetGroupDetails.html
+++ b/app/scripts/modules/amazon/src/loadBalancer/details/targetGroupDetails.html
@@ -75,7 +75,7 @@
       <dl class="horizontal-when-filters-collapsed">
         <dt ng-if="ctrl.loadBalancer.dnsname">Load Balancer DNS Name</dt>
         <dd ng-if="ctrl.loadBalancer.dnsname">
-          <a target=_blank href="{{ctrl.elbProtocol}}//{{ctrl.loadBalancer.dnsname}}">{{ctrl.loadBalancer.dnsname}}</a>
+          <a target="_blank" href="{{ctrl.elbProtocol}}//{{ctrl.loadBalancer.dnsname}}">{{ctrl.loadBalancer.dnsname}}</a>
           <copy-to-clipboard
               class="copy-to-clipboard copy-to-clipboard-sm"
               text="ctrl.loadBalancer.dnsname"
