--- a/app/scripts/modules/amazon/src/loadBalancer/details/loadBalancerDetails.html
+++ b/app/scripts/modules/amazon/src/loadBalancer/details/loadBalancerDetails.html
@@ -107,7 +107,7 @@
       <dl class="horizontal-when-filters-collapsed">
         <dt ng-if="ctrl.loadBalancer.elb.dnsname">DNS Name</dt>
         <dd>
-          <a target=_blank href="{{ctrl.elbProtocol}}//{{ctrl.loadBalancer.elb.dnsname}}">{{ctrl.loadBalancer.elb.dnsname}}</a>
+          <a target="_blank" href="{{ctrl.elbProtocol}}//{{ctrl.loadBalancer.elb.dnsname}}">{{ctrl.loadBalancer.elb.dnsname}}</a>
           <copy-to-clipboard
               class="copy-to-clipboard copy-to-clipboard-sm"
               text="ctrl.loadBalancer.elb.dnsname"
