--- a/app/scripts/modules/titus/src/serverGroup/configure/wizard/securityGroups.html
+++ b/app/scripts/modules/titus/src/serverGroup/configure/wizard/securityGroups.html
@@ -1,6 +1,6 @@
 <titus-security-group-picker ng-if="state.loaded"
                              command="command"
-                             show-amazon-account="true"
+                             amazon-account="command.backingData.credentialsKeyedByAccount[command.credentials].awsAccount"
                              groups-to-edit="command.securityGroups"
                              removed-groups="command.viewState.removedGroups"
                              groups-removed="command.viewState.groupsRemovedStream"
