feat(aws): nlb support

--- a/app/scripts/modules/amazon/src/loadBalancer/details/loadBalancerDetails.html
+++ b/app/scripts/modules/amazon/src/loadBalancer/details/loadBalancerDetails.html
@@ -39,7 +39,7 @@
       </h3>
     </div>
     <div>
-      <div class="actions" ng-if="ctrl.loadBalancer.loadBalancerType !== 'network'">
+      <div class="actions">
         <load-balancer-actions
           app="ctrl.application"
           load-balancer="ctrl.loadBalancer"
