fix(core): properties message for jenkins stage is wrong

--- a/app/scripts/modules/core/src/pipeline/config/triggers/jenkins/jenkinsTrigger.html
+++ b/app/scripts/modules/core/src/pipeline/config/triggers/jenkins/jenkinsTrigger.html
@@ -49,7 +49,7 @@
   <div class="form-group">
     <div class="col-md-3 sm-label-right">
       <b>Property File</b>
-      <help-field key="pipeline.config.jenkins.propertyFile"></help-field>
+      <help-field key="pipeline.config.jenkins.trigger.propertyFile"></help-field>
     </div>
     <div class="col-md-6">
       <input type="text" class="form-control input-sm" ng-model="trigger.propertyFile"/>
