--- a/app/scripts/modules/core/src/pipeline/config/triggers/travis/travisTrigger.html
+++ b/app/scripts/modules/core/src/pipeline/config/triggers/travis/travisTrigger.html
@@ -48,7 +48,7 @@
 <div class="form-group">
   <div class="col-md-3 sm-label-right">
     <b>Property File</b>
-    <help-field key="pipeline.config.travis.propertyFile"></help-field>
+    <help-field key="pipeline.config.travis.trigger.propertyFile"></help-field>
   </div>
   <div class="col-md-6">
     <input type="text" class="form-control input-sm" ng-model="$ctrl.trigger.propertyFile"/>
