feat(authz/config): Add a pipeline roles section to pipeline config. (#5536)
This feature allows users to select roles that are used for authorization
decisions during pipeline execution and removes the need for users to specify
a `runAsUser` field for each trigger. The feature is disabled by default and can
be enabled by setting `managedServiceAccountsEnabled` to true in `settings.js`.

Part of spinnaker/spinnaker#3037

--- a/app/scripts/modules/core/src/pipeline/config/triggers/triggers.html
+++ b/app/scripts/modules/core/src/pipeline/config/triggers/triggers.html
@@ -19,6 +19,13 @@
     </div>
   </page-section>
   <page-section key="triggers" label="Automated Triggers" badge="pipeline.triggers.length" no-wrapper="true">
+    <render-if-feature feature="managedServiceAccounts">
+      <div class="row" ng-if="pipeline.triggers.length">
+        <div class="col-md-12">
+          <pipeline-roles pipeline="pipeline"></pipeline-roles>
+        </div>
+      </div>
+    </render-if-feature>
     <trigger ng-repeat="trigger in pipeline.triggers" trigger="trigger" pipeline="pipeline" application="application"></trigger>
     <div class="row" ng-if="!pipeline.triggers.length">
       <p class="col-md-12">
