fix: kayenta stage help (#339)

--- a/src/kayenta/stages/kayentaStage/kayentaStage.html
+++ b/src/kayenta/stages/kayentaStage/kayentaStage.html
@@ -41,6 +41,7 @@
     <for-analysis-type stage="kayentaCanaryStageCtrl.stage" types="realTime, realTimeAutomatic">
       <stage-config-field label="Lifetime"
                           field-columns="8"
+                          help-key="pipeline.config.canary.lifetime"
                           ng-class="kayentaCanaryStageCtrl.getLifetimeClassnames()"
                           style="padding-left: 0; padding-right: 0;">
         <input type="text"
